--- a/index.html
+++ b/index.html
@@ -7,61 +7,57 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
   </head>
   <body>
-    <nav>
-      <div class="navbartext">Is Your Birthday Lucky?</div>
-    </nav>
-    <div class="inputdiv">
-      <form >
-        <input type="date" required class="form-control" id="input" /><br />
-        <input
-        required
-          type="number"
-          id="luckynumber"
-          class="form-control"
-          maxlength="3"
-          placeholder="Enter Lucky Number:"
-        />
-        <button type="submit" class="btn" id="processbtn">Submit</button>
-      </form>
-    </div>
-
-    <div class="output">
-      <h1 style="color: orange">Waiting</h1>
-      <img src="Images/waiting.png" alt="" class="src" />
-    </div>
-    <footer>
-      <div class="footer-header">Connect with me</div>
-      <ul class="social-links">
-        <br />
-        <li class="list-item">
-          <a class="link" href="https://github.com/gopalbbharadva"
-            ><i class="fab fa-github"></i
-          ></a>
-        </li>
-        <li class="list-item">
-          <a
-            class="link"
-            href="https://www.linkedin.com/in/gopal-bharadva-1aa880176/"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-        </li>
-        <li class="list-item">
-          <a class="link" href="https://www.instagram.com/gopal_33_gb/"
-            ><i class="fab fa-instagram"></i
-          ></a>
-        </li>
-      </ul>
-    </footer>
+    <section>
+      <nav>
+        <div class="navbartext">Is Your Birthday Lucky?</div>
+      </nav>
+      <div class="inputdiv">
+        <form>
+          <input type="date" required class="form-control" id="input" />
+          <input
+            required
+            type="number"
+            id="luckynumber"
+            class="form-control"
+            maxlength="3"
+            placeholder="Enter Lucky Number:"
+          />
+          <button type="submit" class="btn" id="processbtn">Submit</button>
+        </form>
+      </div>
+      <div class="output">
+        <h1 style="color: orange;margin: 0;">Waiting</h1>
+        <img src="Images/waiting.png" alt="" class="src" />
+      </div>
+      <div class="foot">
+        <footer>
+          <ul class="social-links">
+            <br />
+            <li class="list-item">
+              <a class="link" href="https://github.com/gopalbbharadva"
+                ><i class="fab fa-github"></i
+              ></a>
+            </li>
+            <li class="list-item">
+              <a
+                class="link"
+                href="https://www.linkedin.com/in/gopal-bharadva-1aa880176/"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+            </li>
+            <li class="list-item">
+              <a class="link" href="https://twitter.com/Gopal_33_gb"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </li>
+          </ul>
+        </footer>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
