fix:footer position fixed

--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
       <nav>
         <div class="navbartext">Is Your Birthday Lucky?</div>
       </nav>
-      <div class="inputdiv">
-        <form>
-          <input type="date" required class="form-control" id="input" />
-          <input
-            required
-            type="number"
-            id="luckynumber"
-            class="form-control"
-            maxlength="3"
-            placeholder="Enter Lucky Number:"
-          />
-          <button type="submit" class="btn" id="processbtn">Submit</button>
-        </form>
-      </div>
-      <div class="output">
-        <img src="Images/waiting.png" alt="" class="src" />
-      </div>
+      <main>
+        <div class="inputdiv">
+          <form>
+            <input type="date" required class="form-control" id="input" />
+            <input
+              required
+              type="number"
+              id="luckynumber"
+              class="form-control"
+              maxlength="3"
+              placeholder="Enter Lucky Number:"
+            />
+            <button type="submit" class="btn" id="processbtn">Submit</button>
+          </form>
+        </div>  
+        <div class="output">
+          <img src="Images/waiting.png" alt="" class="src" />
+        </div>
+      </main>
       <div class="foot">
         <footer>
           <ul class="social-links">
