refactor:privacy notice added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <main>
         <div class="inputdiv">
           <form>
+            <p style="color: #A78BFA;font-weight: bold;max-width: 300px;text-align: start;">
+              Privacy notice: We are not storing your private data,so don't
+              worry
+            </p>
             <input type="date" required class="form-control" id="input" />
             <input
               required
@@ -29,7 +33,7 @@
             />
             <button type="submit" class="btn" id="processbtn">Submit</button>
           </form>
-        </div>  
+        </div>
         <div class="output">
           <img src="Images/waiting.png" alt="" class="src" />
         </div>
